--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "cordova-ios": "4.5.4",
         "cordova-plugin-camera-preview": "^0.9.0",
         "cordova-plugin-device": "^2.0.1",
+        "cordova-plugin-ionic": "^4.1.0",
         "cordova-plugin-ionic-keyboard": "^2.0.5",
         "cordova-plugin-ionic-webview": "^1.1.16",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -53,7 +54,15 @@
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-ionic-keyboard": {}
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-ionic": {
+                "APP_ID": "6d6cc241",
+                "CHANNEL_NAME": "Production",
+                "UPDATE_METHOD": "auto",
+                "WARN_DEBUG": "true",
+                "UPDATE_API": "https://api.ionicjs.com",
+                "MAX_STORE": "2"
+            }
         },
         "platforms": [
             "ios"
