--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@ionic-native/status-bar": "4.5.3",
         "@ionic/pro": "1.0.20",
         "@ionic/storage": "2.1.3",
+        "base64-img": "^1.0.4",
         "clarifai": "^2.6.0",
         "cordova-ios": "4.5.4",
         "cordova-plugin-camera-preview": "^0.9.0",
@@ -36,6 +37,7 @@
         "cordova-plugin-ionic-webview": "^1.1.16",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3",
+        "fs": "0.0.1-security",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
         "rxjs": "5.5.7",
